Offers basic fetching functionality. Basic Styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <header class="p-8 bg-gray-500">
+        <header class="p-8 primary-bg">
             <img
                 class="block m-auto"
                 src="https://reworth-public-assets.s3-us-west-2.amazonaws.com/img/reworth-logo-white.png"
